--- a/components/home/latest-blogs/latestBlogs.module.css
+++ b/components/home/latest-blogs/latestBlogs.module.css
@@ -76,8 +76,8 @@
         padding: 9vw 0vw 9vw;
     }
     .latest_blog_row{
-        flex-direction: column;
-        max-width: 79vw;
+        /* flex-direction: column; */
+        max-width: 65vw;
         margin: 9vw auto 0;
         padding: 0 2vw;
     }
@@ -85,7 +85,8 @@
         font-size: 6vw;
         font-weight: 600;
         line-height: 1.3;
-        max-width: 210px;
+        max-width: 56vw;
+        min-width: 45vw;
         letter-spacing: 1px;
        
     }
@@ -93,6 +94,8 @@
         font-size: 3.2vw;
     }
     .latest_blog_col p{
+        min-width: 45vw;
+        max-width: 55vw;
         font-size: 3.2vw;
         padding: 1.99vw 0;
         line-height: 1.6;
